# vscode-bazel

./: .gitignore  BUILD.bazel  MODULE.bazel  package-lock.json  package.json  pnpm-lock.yaml
src/extension/: configuration.ts
src/workspace-tree/: bazel_package_tree_item.ts  bazel_target_tree_item.ts  bazel_workspace_folder_tree_item.ts  bazel_workspace_tree_provider.ts  querier.ts
