module(name = "vscode-bazel", version = "0.10.0")

bazel_dep(name = "aspect_bazel_lib", version = "2.9.3")

bazel_dep(name = "aspect_rules_js", version = "2.1.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency=True)
npm.npm_translate_lock(name = "npm", data = ["//:package.json"], pnpm_lock = "//:pnpm-lock.yaml", npm_package_lock = "package-lock.json")
use_repo(npm, "npm")

bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0")

